# ransomware

./: Cargo.toml  decrypt.rs.bak  mysql_data  sh.sh  sql
src/: .decryptor_main.rs.swp  .readme.rs.swp  decryptor.rs  decryptor_main.rs  encryptor.rs  encryptor_main.rs  main.rs  readme.rs
